tests/snapshots/test_runner__tests__compiler__typecheck__generic_function_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let identity = <A>(a: A): A => a

let constant = <A>(_: A): Integer => 2

let map = <A, B>(a: A, f: (a: A) => B): B => a.f()

{
  let x: String = "hello".map(identity)
  let y: String = "hello".map((_) => "yo")
  let z: String = "hello".map(constant)
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
   ┌─ tests/compiler/typecheck/generic_function_1.kk:10:19
   │
10 │   let z: String = "hello".map(constant)
   │                   ^^^^^^^^^^^^^^^^^^^^^ Type mismatch
   │
   = +---------------+-------------+
     | EXPECTED TYPE | ACTUAL TYPE |
     +---------------+-------------+
     | - String      | + Integer   |
     +---------------+-------------+
